--- a/css/explore.css
+++ b/css/explore.css
@@ -57,13 +57,18 @@ body {
     background-color: #fdd31d;
 }
 
+.thumbnail img {
+    height: 200px;
+    width: 250px;
+}
+
 .bg-modal {
     background-color: rgba(0, 0, 0, 0.8);
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
