--- a/css/admin.css
+++ b/css/admin.css
@@ -48,7 +48,7 @@ body {
 }
 
 .course-1 {
-    height: 300px;
+    height: 350px;
     width: 300px;
     border: 0.5px solid #bbbbbb;
     border-radius: 5px;
@@ -91,6 +91,21 @@ body {
     font-size: small;
 
 }
+
+.description button {
+    text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    color: aliceblue;
+    background-color: green;
+    padding: 8px 20px 12px;
+    display: block;
+    width: 100%;
+    border: 1px solid green;
+    border-radius: 5px;
+    margin-top: 15px;
+}
+
 
 .bg-modal {
     background-color: rgba(0, 0, 0, 0.8);
